# CompressionMatriceZfp

./: CMakeCache.txt  CMakeLists.txt  Config  Makefile  Makefile2  README.md  cmake_install.cmake  cmd.txt  compress  compress.c  compress.cc  compressed.zfp  decompress  decompress.c  decompress.cc  evaluation.cc  evaluationDeLErreur.c  evaluationDeLErreur.cc  evaluationerreur  exe  genereraw.c  genereraw.cc  main.cpp  matrix.cc  matrix.raw  matrix2.raw  nouvelEssai2.vti  param.h  readme.txt  test.vti  test2.vti  testMatrix.vti
Gerris/: cylinder.gfs  end-NL2.vtk
vtkBase/: vtk.cmake
vtkBase/baseCode/common/: Color.h  CommandLineParser.h  Debug.h  Os.h  common.cmake
